--- a/server/src/templates/edit.ejs
+++ b/server/src/templates/edit.ejs
@@ -54,7 +54,7 @@
                 <% } %>
                 <form action="deleteItem" method="post">
                     <input type="hidden" name="item" value="<%= index %>">
-                    <input type="submit" value="Delete Item">
+                    <input type="submit" value="Reset Item">
                 </form>
             <% } else { %>
                 <form action="addMessage" method="post">
