--- a/server/src/templates/view.ejs
+++ b/server/src/templates/view.ejs
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title></title>
+    <title>Studio Chocolate Hybrid Gift</title>
     <link rel="stylesheet" href="<%= prefix %>../css/chocolate.css">
-
     <link rel="icon" type="image/webp" href="<%= prefix %>../images/choclogo.webp"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<img src="<%= prefix %>../images/choclogo.webp" class="logo">
+<img src="<%= prefix %>../images/choclogo.webp" class="logo" alt="Studio Chocolate Logo">
+<div style="max-width: 500px">
+    What is a hybrid gift, you say? Have a look at the one made just for you! It’s like a digital gift card – you
+    probably want to open the box while you look, or listen, or both.
+</div>
 <div class="items">
     <% content.forEach((contentItem, index) => { %>
         <div class="item"
@@ -44,12 +47,19 @@
             <% } %>
         </div>
     <% }); %>
-    <div style="display: flex; flex: 1 1 300px">
-        <img src="<%= prefix %>../images/uon.svg" style="width: 150px; align-self: center; padding-top: 12px"/>
-        <a href="<%= prefix %>../faq.html" style="padding: 16px; font-size: smaller; align-self: center">FAQs</a>
-        <!--<div style="font-size: smaller; padding-left: 12px; padding-top: 12px">Developed by the University of Nottingham. To help our research,
-            please consider taking this short questionnaire.
-        </div>-->
+    <div style="padding: 16px 0">
+        We would love to hear your feedback! Please click to <a
+                href="https://nottingham.onlinesurveys.ac.uk/studio-gift">send us your thoughts</a> anonymously or
+        submit your email to do a quick phone interview with a University of Nottingham researcher. You’ll receive £10
+        off your next Studio Chocolate order by 30 June 2021 in exchange for your time being interviewed.
+    </div>
+
+    <div style="display: flex; align-items: center; width: 100%">
+        <img src="<%= prefix %>../images/uon.svg" style="width: 150px"/>
+        <a href="<%= prefix %>../faq.html" style="padding: 16px; font-size: smaller">FAQs</a>
+        <% if(preview) { %>
+            <a href="edit" style="flex: 1 1 300px; padding: 24px; text-align: end">Return to Hybrid Gift Maker</a>
+        <% } %>
     </div>
 </div>
 </body>
