--- a/server/src/templates/edit.ejs
+++ b/server/src/templates/edit.ejs
@@ -103,11 +103,9 @@
         Add the content types in any combination you like. 4 photos, 3 links and a message, or just one or two pieces
         of content – it's your &lsquo;gift card&rsquo;, so you get to create what you like.
         <hr/>
-        All your receiver has to do is scan the QR code with their bonbons that links to what you&rsquo;re making. You
-        might
-        want to arrange a special time for them to &lsquo;open&rsquo; their hybrid gift – Studio's amazing bonbons plus
-        your
-        personal hybrid gift experience.
+        All your receiver has to do is scan the custom QR code that will arrive with their bonbons. The QR code links directly to what you’re making. You
+        might want to arrange a special time for them to &lsquo;open&rsquo; their hybrid gift – Studio's amazing bonbons plus
+        your personal hybrid gift experience.
         <hr/>
         You can come back to your gift at any time. Add more content or change what you have, even after the gift has
         been &lsquo;opened&rsquo;.
@@ -115,8 +113,8 @@
         We would love to hear your feedback! Please click to <a
                 href="https://nottingham.onlinesurveys.ac.uk/studio-gift">send us your thoughts</a>
         anonymously or submit your email to do a quick phone interview with a University of Nottingham researcher.
-        You&rsquo;ll receive £10 off your next Studio Chocolate order by 30 June 2021 in exchange for your time being
-        interviewed.
+        You&rsquo;ll receive <strong>£10 off your next Studio Chocolate order by 30 June 2021</strong> in exchange for
+        your time being interviewed.
     </div>
     <div style="display: flex; width: 100%; padding-top: 16px; align-items: center">
         <img src="../../images/uon.svg" style="width: 150px"/>
