--- a/server/src/templates/view.ejs
+++ b/server/src/templates/view.ejs
@@ -50,8 +50,8 @@
     <div style="padding: 16px 0">
         We would love to hear your feedback! Please click to <a
                 href="https://nottingham.onlinesurveys.ac.uk/studio-gift">send us your thoughts</a> anonymously or
-        submit your email to do a quick phone interview with a University of Nottingham researcher. You’ll receive £10
-        off your next Studio Chocolate order by 30 June 2021 in exchange for your time being interviewed.
+        submit your email to do a quick phone interview with a University of Nottingham researcher. You’ll receive <strong>£10
+        off your next Studio Chocolate order by 30 June 2021</strong>  in exchange for your time being interviewed.
     </div>
 
     <div style="display: flex; align-items: center; width: 100%">
