--- a/server/src/templates/edit.ejs
+++ b/server/src/templates/edit.ejs
@@ -149,7 +149,7 @@
         <img src="../../images/uon.svg" style="width: 150px"/>
         <a href="../../faq.html" style="padding: 16px; font-size: smaller">FAQs</a>
         <a href="preview" style="flex: 1 1 300px; padding: 24px; text-align: end">Preview</a>
-        <a href="." style="padding: 24px; text-align: end">Submit</a>
+        <a href="." class="btn" style="text-align: end">Submit</a>
     </div>
 </div>
 <script defer>
