--- a/server/src/templates/intro.ejs
+++ b/server/src/templates/intro.ejs
@@ -16,14 +16,19 @@
     <hr/>
     Add music, video, audio, links, an extra little message... whatever you think will set the right tone.
     <hr/>
-    You don't need to register with your name or email address. Just enter your invoice number (on your confirmation
+    You don't need to register with your name or email address. Just enter your order number (on your confirmation
     page and confirmation email) and create a password so that you can come back and add to your gift later if you want
     to.
 </div>
 
+<div style="display: flex">
+    <a href="#" id="createTab" class="tab">Create a Gift</a>
+    <a href="#" id="loginTab" class="tab tabSelect">Login to an Existing Gift</a>
+</div>
+
 <form id="create" action="create" method="post" <%= login === true ? 'style=display:none' : '' %>>
     <div class="list">
-        <label for="createOrder">Invoice Number</label>
+        <label for="createOrder">Order Number</label>
         <input id="createOrder" class="field" type="number" name="order" required min="1" pattern="[0-9]+"
                value="<%= order %>">
         <label for="createPass">Password</label>
@@ -37,7 +42,7 @@
 
 <form id="login" action="login" method="post" <%= login !== true ? 'style=display:none' : '' %>>
     <div class="list">
-        <label for="loginOrder">Invoice Number</label>
+        <label for="loginOrder">Order Number</label>
         <input id="loginOrder" class="field" type="number" name="order" required min="1" pattern="[0-9]+"
                value="<%= order %>">
         <label for="loginPass">Password</label>
@@ -46,8 +51,6 @@
         <input id="loginSubmit" type="submit" value="Login" class="field" disabled>
     </div>
 </form>
-
-<a href="#" id="loginLink">Login to an Existing Gift</a>
 
 <a href="faq.html" style="padding: 8px 16px; font-size: x-small">FAQs</a>
 
@@ -91,16 +94,18 @@
 		});
 	});
 
-	document.getElementById('loginLink').addEventListener('click', () => {
-		if (createForm.style.display === 'none') {
-			document.getElementById('loginLink').innerText = 'Login to an Existing Gift';
-			document.getElementById('create').style.display = 'block';
-			document.getElementById('login').style.display = 'none';
-		} else {
-			document.getElementById('loginLink').innerText = 'Get Started with a New Gift';
-			document.getElementById('create').style.display = 'none';
-			document.getElementById('login').style.display = 'block';
-		}
+	document.getElementById('loginTab').addEventListener('click', () => {
+		document.getElementById('create').style.display = 'none';
+		document.getElementById('login').style.display = 'block';
+		document.getElementById('loginTab').classList.remove('tabSelect');
+		document.getElementById('createTab').classList.add('tabSelect');
+	});
+
+	document.getElementById('createTab').addEventListener('click', () => {
+		document.getElementById('create').style.display = 'block';
+		document.getElementById('login').style.display = 'none';
+		document.getElementById('loginTab').classList.add('tabSelect');
+		document.getElementById('createTab').classList.remove('tabSelect');
 	});
 
 	const createPass = document.getElementById('createPass');
