--- a/server/src/templates/edit.ejs
+++ b/server/src/templates/edit.ejs
@@ -8,11 +8,18 @@
 </head>
 <body>
 <img src="../../images/choclogo.webp" class="logo" alt="Studio Chocolate Logo">
-<div style="max-width: 400px; padding-top: 16px;">
-    You can fill each box with one item: 'Media' (an image, audio file, or video), a link, or a written message. Media
+<div style="max-width: 600px; padding-top: 16px;">
+    This is where you create the multimedia experience for your gift receiver to open and eat their bonbons to. You’ll
+    probably want to tell them to look out for the QR code on the card that comes with their chocolate box so they don’t
+    miss out!
+    <hr/>
+    You can fill each panel with one item: 'Media' (an image, audio file, or video), a link, or a written message. Media
     files can only be 10MB, but you can always upload longer files to YouTube or any other service and add the link.
 </div>
 <div class="items">
+    <% if(saved) { %>
+        <div id="saveConfirm">Changes Saved. Make more edits anytime.</div>
+    <% } %>
     <% content.forEach((contentItem, index) => { %>
         <div class="item"
              style="background-color: <%= index === 0 || index === 3 ? '#ffebe3' : index === 1 ? '#fab89d' : '#d1c8e1' %>">
@@ -34,13 +41,7 @@
                 <% } else if(contentItem.mimetype === 'text/plain') { %>
                     <% itemType = "Message" %>
                     <% if(contentItem.editing) { %>
-                        <form action="updateMessage" method="post" class="messageEdit">
-                            <textarea name="content" rows="10"><%= contentItem.uri %></textarea>
-                            <input type="hidden" name="item" value="<%= index %>">
-                            <div style="display: flex;">
-                                <input type="submit" value="Save Message">
-                            </div>
-                        </form>
+                        <textarea name="message<%= index %>" rows="10"><%= contentItem.uri %></textarea>
                     <% } else { %>
                         <div class="message"><%= contentItem.uri %></div>
                     <% } %>
@@ -62,7 +63,8 @@
                     <% } else { %>
                         <% itemType = "Link" %>
                         <form action="editLink" method="post"
-                              style="display: flex; flex-direction: column; padding: 16px; width: 100%; box-sizing: border-box" novalidate>
+                              style="display: flex; flex-direction: column; padding: 16px; width: 100%; box-sizing: border-box"
+                              novalidate>
                             <div style="font-size: smaller;padding-bottom: 8px">Adding a link to an picture, video or
                                 audio file will embed that file into your gift.
                                 For any other link a summary of the page being linked to will be displayed, if
@@ -138,18 +140,20 @@
         <hr/>
         You can come back to your gift at any time. Add more content or change what you have, even after the gift has
         been &lsquo;opened&rsquo;.
-        <hr/>
+        <img src="../../images/scanning.jpg" style="display: block;margin: 16px auto; max-width: 600px;">
         We would love to hear your feedback! Please click to <a
                 href="https://nottingham.onlinesurveys.ac.uk/studio-gift">send us your thoughts</a>
         anonymously or submit your email to do a quick phone interview with a University of Nottingham researcher.
         You&rsquo;ll receive <strong>£10 off your next Studio Chocolate order by 30 June 2021</strong> in exchange for
         your time being interviewed.
     </div>
-    <div style="display: flex; width: 100%; padding-top: 16px; align-items: center">
+    <div style="display: flex; flex-wrap:  wrap; width: 100%; padding-top: 16px; align-items: center">
         <img src="../../images/uon.svg" style="width: 150px"/>
         <a href="../../faq.html" style="padding: 16px; font-size: smaller">FAQs</a>
-        <a href="preview" style="flex: 1 1 300px; padding: 24px; text-align: end">Preview</a>
-        <a href="." class="btn" style="text-align: end">Submit</a>
+        <a href="preview" style="flex: 1; padding: 16px; text-align: end">Preview</a>
+        <form id="saveForm" action="edit" method="post">
+            <input id="saveButton" type="submit" value="Save">
+        </form>
     </div>
 </div>
 <script defer>
@@ -173,12 +177,28 @@
 		return bytes.toFixed(dp) + ' ' + units[u];
 	}
 
+	function addMessages(form) {
+		document.querySelectorAll("textarea").forEach((text) => {
+			const input = document.createElement('input');
+			input.setAttribute('type', 'hidden');
+			input.setAttribute('value', text.value);
+			input.setAttribute('name', text.name);
+			form.appendChild(input);
+		});
+	}
+
+	const saveForm = document.getElementById('saveForm');
+	document.querySelectorAll("form").forEach((form) => {
+		form.addEventListener('submit', () => {
+			addMessages(form);
+		});
+	});
+
 	document.querySelectorAll("input[type=file]").forEach((input) => {
-		console.log(input);
 		input.addEventListener('change', (event) => {
 			const size = event.target.files[0].size;
-			console.log(event.target.files[0].size);
 			if (size < maxFileSize) {
+				addMessages(event.target.form);
 				event.target.form.submit();
 			} else {
 				document.getElementById('uploadError').innerText = 'This server only allows uploads up to ' +
